First commit to test git diff

--- a/fog_paper_v2.tex
+++ b/fog_paper_v2.tex
@@ -40,7 +40,7 @@
 
 \begin{abstract}
 
-Cloud water interception (CWI) by the vegetation can be an important water input to ecosystems subject to fog occurrence. In this work, we propose a methodology to estimate CWI by a forest using a Rutter-type interception model. The approach requires the acquisition of experimental observations. Continuous records of meteorological variables, including fog interception that is measured using a fog gauge system, are used as the input dataset of the model.  Additionally, throughfall measurements performed below the forest are required only for the calibration and validation of the model, which constitutes a significant advantage considering the difficulties to obtain continuous records of throughfall. This methodology is applied in San Cristobal Island (Galapagos), where a semi-permanent fog layer covers the windward highlands during six months of a year. A study plot in a endemic forest in the highlands has been monitored during two years. Results show that CWI reaches 23\% and 10\% of the total water input of the first and second year, respectively. During the hot seasons, where fog is absent, CWI is negligible as expected, while it represents 37\% and 19\% of the water inputs during the first and second cool seasons, respectively. The marked difference of CWI between both cool seasons is related to higher liquid water content in the air during the first season. This methodology provides an indirect quantification of CWI by the vegetation from artificial fog gauges, it identifies controlling factors of CWI and it could be used to compare CWI in contrasting land covers. 
+Cloud water interception (CWI) by the vegetation can be an important water input to ecosystems subject to fog occurrence. In this work, we propose a methodology to estimate CWI by a forest using a Rutter-type interception model. The approach requires the acquisition of experimental data. Continuous records of meteorological variables, including fog interception that is measured using a fog gauge system, are used as the input dataset of the model.  Additionally, throughfall measurements performed below the forest are required only for the calibration and validation of the model, which constitutes a significant advantage considering the difficulties to obtain continuous records of throughfall. This methodology is applied in San Cristobal Island (Galapagos), where a semi-permanent fog layer covers the windward highlands during six months of a year. A study plot in a endemic forest in the highlands has been monitored during two years. Results show that CWI reaches 23\% and 10\% of the total water input of the first and second year, respectively. During the hot seasons, where fog is absent, CWI is negligible as expected, while it represents 37\% and 19\% of the water inputs during the first and second cool seasons, respectively. The marked difference of CWI between both cool seasons is related to higher liquid water content in the air during the first season. This methodology provides an indirect quantification of CWI by the vegetation from artificial fog gauges, it identifies controlling factors of CWI and it could be used to compare CWI in contrasting land covers. 
 
 \end{abstract}
 
