First changes only up to section 3.3.2

--- a/fog_paper_v2.tex
+++ b/fog_paper_v2.tex
@@ -40,7 +40,9 @@
 
 \begin{abstract}
 
-Cloud water interception (CWI) by the vegetation can be an important water input to ecosystems subject to fog occurrence. In this work, we propose a methodology to estimate CWI by a forest using a Rutter-type interception model. The approach requires the acquisition of experimental data. Continuous records of meteorological variables, including fog interception that is measured using a fog gauge system, are used as the input dataset of the model.  Additionally, throughfall measurements performed below the forest are required only for the calibration and validation of the model, which constitutes a significant advantage considering the difficulties to obtain continuous records of throughfall. This methodology is applied in San Cristobal Island (Galapagos), where a semi-permanent fog layer covers the windward highlands during six months of a year. A study plot in a endemic forest in the highlands has been monitored during two years. Results show that CWI reaches 23\% and 10\% of the total water input of the first and second year, respectively. During the hot seasons, where fog is absent, CWI is negligible as expected, while it represents 37\% and 19\% of the water inputs during the first and second cool seasons, respectively. The marked difference of CWI between both cool seasons is related to higher liquid water content in the air during the first season. This methodology provides an indirect quantification of CWI by the vegetation from artificial fog gauges, it identifies controlling factors of CWI and it could be used to compare CWI in contrasting land covers. 
+Cloud water interception (CWI) by the vegetation can be an important water input to ecosystems subject to fog occurrence. In this work, we propose a methodology to estimate CWI by a forest using a Rutter-type interception model. The approach requires the acquisition of experimental data. Continuous records of meteorological variables, including fog interception that is measured using a fog gauge system, are used as the input of the model.  Additionally, throughfall measurements performed below the forest are required only for the calibration and validation of the model, which constitutes a significant advantage considering the difficulties to obtain continuous records of throughfall. This methodology is applied in San Cristobal Island (Galapagos), where a semi-permanent fog layer covers the windward highlands during six months per year. A study plot in an endemic forest in the highlands has been monitored during two years. Results show that CWI reaches 23\% and 10\% of the total water input of the first and second year, respectively. During the hot seasons, where fog is absent, CWI is negligible as expected, while it represents 37\% and 19\% of the water inputs during the first and second cool seasons, respectively. The marked difference of CWI between both cool seasons is related to higher liquid water content in the air during the first season. This methodology provides an indirect quantification of CWI by the vegetation from artificial fog gauges, it identifies controlling factors of CWI and it could be used to compare CWI in contrasting land covers. 
+
+My comment: Are the values of 23\% and 10\% related to those of 37\% and 19\%? If they are, wouldn't it be better to only quote one set or the other? Otherwise it is making the abstract unnecessarily long?
 
 \end{abstract}
 
@@ -55,11 +57,11 @@ Cloud water interception (CWI) by the vegetation can be an important water input
 
 \begin{linenumbers}
 \section{Introduction}
-Cloud water interception (CWI) by the vegetation subject to fog occurrence has been considered as an important hydrological process because it is an additional water input to the canopy water budget. Moreover, it has been associated with a reduction in the evapotranspiration \citep{Hamiltonetal1995, Bruijnzeel2001, Ritteretal2008}. Its measurement is critical for a suitable water management policies, especially in regions with limited water resources and subject to land use change. 
+Cloud water interception (CWI) by the vegetation subject to fog occurrence has been considered as an important hydrological process because it is an additional water input to the canopy water budget. Moreover, it has been associated with a reduction in the evapotranspiration \citep{Hamiltonetal1995, Bruijnzeel2001, Ritteretal2008}. Its measurement is critical for designing suitable water management policies, especially in regions with limited water resources and subject to land use change. 
 
-Basically, three main factors influence CWI \citep{Braumanetal2010, Villegasetal2008, Ritteretal2008}: climatic conditions (air liquid content, fog drop size, wind speed), canopy structure (size, height, density, leave morphology and orientation) and location (elevation, terrain slope and orientation). Attempts to quantify CWI has been proposed in different locations around the world \citep{Ingrahametal1988, CavalierandGoldstein1989, Hamiltonetal1995, Holder2004, McJannetetal2007a, Gabrieletal2008, GomezPeraltaetal2008, Ritteretal2008, Villegasetal2008, Holwerdaetal2010, Ueharaetal2012, Pryetetal2012a}, reporting variable results, which show that CWI is highly dependable of the site. Methods to quantify CWI includes the use of passive fog gauges \citep{Juvik1978, Ingrahametal1988, Aboaletal2000, Villegasetal2008, Frumauetal2011}, measurements of net precipitation (throughfall and stemflow) \citep{Holder2003, Gabrieletal2008, Pradaetal2009, Pryetetal2012a} and others alternatives such as the use of eddy covariance instruments \citep{Changetal2002, Holwerdaetal2006, Eugsteretal2006}. Even though the latter have proven to effectively provide estimates of fog deposition, the instrumentation is expensive and the data treatment is challenging. In the other hand, fog gauges are relatively easy to install but the fog estimates they provide are related to their capacity to catch fog and not from the vegetation. Thus, these are indirect estimates that are dependable of the fog gauge design. Net precipitation measurements in that sens, provide direct estimations related to the canopy capacity to intercept fog, once the interception variable in the canopy water balance is known. Few studies have related estimates of CWI from passive fog gauges with the ones of vegetation. \cite{Ritteretal2008} used data from fog gauges to derive fog characteristics, which are used in a physically based impaction model to quantify CWI of a subtropical elfin cloud forest in La Gomera (Canary Islands). \cite{Holwerdaetal2011} found that estimates of CWI with a wet canopy water budget in a Puerto Rican elfin cloud forest correlated significantly with measured CWI in passive fog gauges.
+Basically, three main factors influence CWI \citep{Braumanetal2010, Villegasetal2008, Ritteretal2008}: climatic conditions (air liquid content, fog drop size, wind speed), canopy structure (size, height, density, leave morphology and orientation) and location (elevation, terrain slope and orientation). Attempts to quantify CWI have been proposed in different locations around the world \citep{Ingrahametal1988, CavalierandGoldstein1989, Hamiltonetal1995, Holder2004, McJannetetal2007a, Gabrieletal2008, GomezPeraltaetal2008, Ritteretal2008, Villegasetal2008, Holwerdaetal2010, Ueharaetal2012, Pryetetal2012a}, reporting variable results, which show that CWI is highly dependable on the site. Methods to quantify CWI include the use of passive fog gauges \citep{Juvik1978, Ingrahametal1988, Aboaletal2000, Villegasetal2008, Frumauetal2011}, measurements of net precipitation (throughfall and stemflow) \citep{Holder2003, Gabrieletal2008, Pradaetal2009, Pryetetal2012a} and other alternatives such as the use of eddy covariance instruments \citep{Changetal2002, Holwerdaetal2006, Eugsteretal2006}. Even though the latter have proven to effectively provide estimates of fog deposition, the instrumentation is expensive and the data treatment is challenging. On the other hand, fog gauges are relatively easy to install but the fog estimates they provide are related to their capacity to catch fog and not to the vegetation. Thus, these are indirect estimates that are dependable on the fog gauge design. Net precipitation measurements in that sense, provide direct estimations related to the canopy capacity to intercept fog, once the interception variable in the canopy water balance is known. Few studies have related estimates of CWI from passive fog gauges with the ones from vegetation. \cite{Ritteretal2008} used data from fog gauges to derive fog characteristics, which are used in a physically based impaction model to quantify CWI of a subtropical elfin cloud forest in La Gomera (Canary Islands). \cite{Holwerdaetal2011} found that estimates of CWI with a wet canopy water budget in a Puerto Rican elfin cloud forest correlated significantly with measured CWI in passive fog gauges.
 
-Interception models have been used in the context of CWI to estimate rainfall interception losses, in which observed net precipitation is compared with the simulated one in conditions without fog (rain-only events) and the difference is attributed to CWI \citep{Holwerdaetal2010, Pryetetal2012a}. These models require measurements of rainfall and net precipitation, whereas evaporation is estimated with an energy balance approach (most commonly Penman–Monteith theory). The drawback of this approach is that it requires continuous measurements of net precipitation, which can be challenging.  The two most common approaches used are \citep{Muzyloetal2009}:  i) Rutter-type models (e.g. \cite{Liu1997, Rutter1975}), based on the running canopy water budget, and 2) Gash-type models (e.g. \cite{Gash1979, Zengetal2000}), based on discrete rainfall events. Generally, Gash models are preferred because of their simplicity, but they require the separation of individual rainfall events. In context of fog occurrence and continuous rainfall, this could be quite challenging. This could probably be reason why Rutter type model were more freqeuntly used in tropical rainforest climates \citep{Muzyloetal2009}. Moreover, \cite{vanDijketal2015} studied sources of errors in the estimation of interception losses in canopy water budgets, and showed that the Rutter-type model with accurate estimations of evaporation provide the best results. 
+Interception models have been used in the context of CWI to estimate rainfall interception losses, in which observed net precipitation is compared with the simulated one in conditions without fog (rain-only events) and the difference is attributed to CWI \citep{Holwerdaetal2010, Pryetetal2012a}. These models require measurements of rainfall and net precipitation, whereas evaporation is estimated with an energy balance approach (most commonly Penman–Monteith theory). The drawback of this approach is that it requires continuous measurements of net precipitation, which can be challenging.  The two most common approaches used are \citep{Muzyloetal2009}:  i) Rutter-type models (e.g. \cite{Liu1997, Rutter1975}), based on the running canopy water budget, and 2) Gash-type models (e.g. \cite{Gash1979, Zengetal2000}), based on discrete rainfall events. Generally, Gash models are preferred because of their simplicity, but they require the separation of individual rainfall events. In the context of fog occurrence and continuous rainfall, this could be quite challenging. This could probably be the reason why Rutter type models were more frequently used in tropical rainforest climates \citep{Muzyloetal2009}. Moreover, \cite{vanDijketal2015} studied sources of errors in the estimation of interception losses in canopy water budgets, and showed that the Rutter-type models with accurate estimations of evaporation provide the best results. 
 
 The objective of this work is to propose and validate an innovate methodology to estimate cloud water interception by a forest using a Rutter-type interception model, in which CWI in the forest is estimated from monitoring of climatic variables, including fog interception by a passive fog gauge system. CWI estimates in the forest are obtained from measurements of the passive fog gauge and not as the remaining variable in the canopy water balance. In this way, measured net precipitation is only used for calibration and validation purposes. We tested this methodology in an endemic forest in the highlands of San Cristobal Island (Galapagos Archipelago). 
 
@@ -67,7 +69,7 @@ The objective of this work is to propose and validate an innovate methodology to
 \subsection{Climatic and hydrological context}
 The Galapagos Archipelago is located in the Eastern Pacific, $1000$ $\mathrm{km}$ west of the Ecuadorian mainland. The climatic conditions are atypical for its equatorial position. Essentially, there are two distinct seasons: 1) The cool “garua” season from June to December, where the sea surface and air temperature are relatively low \citep{PalmerandPyle1966, Dunbaretal1994}, and it is characterized by the occurrence of orographic precipitations and the presence of a semi-permanent fog layer that covers the highlands of the main islands \citep{TruemananddOzouville2010, Pryetetal2012a}. 2) The hot “invierno” season from January to May, characterized by high sea and air temperatures, and high intensity convective precipitations \citep{GrantandBoag1980, Dunbaretal1994, TruemananddOzouville2010}. Considering the long term records (1965-2015) of the weather station operated by the \emph{Charles Darwin Foundation} at the coast of Santa Cruz Island (alt. $6$ $\mathrm{m}$ a.s.l.), the median annual rainfall is $278$ $\mathrm{mm}$ and the average air temperature is $24$ $\mathrm{^{\circ}C}$.
 
-San Cristobal Island, located at the East of Galapagos, is the only island of the Archipelago with permanent surface water resources (\autoref{fig3:fog_map}). This resources are located at the southern side of the island. The hydrological system is complex in this zone. Over the highlands, gentle slopes allow the pounding of rainfall. Over mid-slope, a well-developed drainage network can be observed. Several ravines are dry, but others are fed by perennial springs that outcrop of impermeable layers. The interpretation from the AEM SkyTEM dataset \cite{dOzouville2007} suggests that the spring are originated from perched aquifers formed over impervious layers, which are disconnected from the basal aquifer \citep{Pryetetal2012b, Violetteetal2014}. The population of the island is entirely dependent on the streams of this zone for water supply. At the lowlands, due to infiltration losses on the riverbeds, only four ravines have been identified to have streamflow reaching to the sea \citep{dOzouville2007}. 
+San Cristobal Island, located at the East of Galapagos, is the only island of the Archipelago with permanent surface water resources (\autoref{fig3:fog_map}). This resources are located at the southern side of the island. The hydrological system is complex in this zone. Over the highlands, gentle slopes allow the pounding of rainfall. Over mid-slope, a well-developed drainage network can be observed. Several ravines are dry, but others are fed by perennial springs that outcrop of impermeable layers (My comment: Is this previous sentence right?: Several ravines are dry, ...). The interpretation from the AEM SkyTEM dataset \cite{dOzouville2007} suggests that the spring are originated from perched aquifers formed over impervious layers, which are disconnected from the basal aquifer \citep{Pryetetal2012b, Violetteetal2014}. The population of the island is entirely dependent on the streams of this zone for water supply. At the lowlands, due to infiltration losses on the riverbeds, only four ravines have been identified to have streamflow reaching to the sea \citep{dOzouville2007}. 
 
 \subsection{Highlands vegetation and study plot}
 The study area lies in the southern windward highlands, within the agricultural zone that extends from the midlands until the summit of the islands. Originally, highlands hosted mainly ferns and forest of endemic \emph{Miconia Robinsoniana} shrub, which has been classified by \cite{Pryetetal2012a} as a low-elevation elfin cloud forest. The \emph{Miconia} shrubs form small patches varying in height. They grow on steep slopes exposed to winds and fog. Due to the development of agriculture, endemic forest are being converted into pasture and secondary forests. However, vast regions of the highlands are covered by the endemic forest, so they are still representative of the contemporary vegetation of the windward highlands. For this reason, we identified one study plot representative of the \emph{Miconia} forest. 
@@ -81,6 +83,8 @@ The study plot is characterized by a single-storied architecture of \emph{Miconi
 
 \section{Methodology}
 
+(My comment: Is there some part of the methodology which is similar to the one in the previous paper, so that one can just reference and not describe everything?)
+
 \subsection{Climatic monitoring} \label{sec:fog_int_moni}
 Climatic monitoring was conducted with a weather station in the clearings close to the study plot (ca. $50$ $\mathrm{m}$) and consists of measurements of rainfall, solar radiation, air temperature, relative humidity, wind direction and speed and fog interception (\autoref{fig3:fog_mon}). Data was recorded at a 15-minutes time step using a Campbell CR1000 datalogger. Rainfall was measured with a Texas TE525MM rain gauge placed at 1.5 m above the ground. Wind speed and direction were monitored with a Young WindSentry Kit positioned at 2 m above the ground. Solar radiation, relative humidity and temperature were measured at 2 m above the ground, with a Kipp\&Zonen SPLite silicone pyranometer and a Campbell CS215 T\&RH sensor, respectively. Fog interception was measured with a cylindrical fog gauge (height 40 cm, 12 cm in diameter) made of plastic mesh (1 mm) at 2 m above the ground. Intercepted water was collected with a funnel at the base of the cylinder and diverted to an automatic tipping bucket rain gauge. Using this system, fog interception and rainfall are collected, hence the partition into rainfall and fog interception is necessary.
 
@@ -88,12 +92,12 @@ Climatic monitoring was conducted with a weather station in the clearings close 
 Throughfall measurements were performed within 6m$\times$6m plot beneath vegetation canopy (\autoref{fig3:fog_mon2}), using \citep{Dominguez2011, Pryetetal2012a}: i) a set of troughs draining into an automatic tipping bucket gauge \citep{Ziegleretal2009, Holwerdaetal2010, Zimmermannetal2014}, and ii) manually read small collectors distributed randomly within the plot \citep{Keimetal2005, Staelensetal2006, Zimmermannetal2009}. Troughs were made of 3 m long PVC pipes of diameter 10 cm cut in half. They have an average inclination of 25$^\circ$ to facilitate drainage. 6 troughs were used in this study corresponding to a collection area of 1.8 m$^2$. Manual collectors are used to assess the spatial representativity of the continuous troughs measurements. Collectors were made from funnels of diameter 16 cm placed over 2-L containers. A total of 30 collectors (total area of 0.6 m$^2$) were used in the plot. They remained fixed during the study period. Measurements were performed manually, but the number of measurements were limited due to difficulties of access to the field notably after rainfall events. 
 
 
-Stemflow was measured using a malleable plastic funnel adhered to the trunk and connected to a hose that drips collected water into a 2-L capacity container. Funnels were made for each trunk with a diameter 1 cm larger than the one of the trunk. They were placed at 0.5 cm above the ground. Stemflow measurements were limited to 8 trunks with a diameter larger than 6 cm. We could not measure stemflow for the rest of the trunks within the plot (78). However, mean height of measured stemflow of the 8 trunks represented less than 0.5\% of incident rainfall, even though we were generous limiting the incident surface of each trunk. In Santa Cruz Island, \cite{Pryetetal2012a} estimated stemflow of 0.6\% of the incident rainfall for the same vegetation at a similar altitude. Thus, considering that errors of our throughfall measurements might be considerably larger than measured stemflow, we consider stemflow to be negligible.
+Stemflow was measured using a malleable plastic funnel adhered to the trunk and connected to a hose that drips collected water into a 2-L capacity container. Funnels were made for each trunk with a diameter 1 cm larger than the one of the trunk. They were placed at 0.5 cm above the ground. Stemflow measurements were limited to 8 trunks with a diameter larger than 6 cm. We could not measure stemflow for the rest of the trunks within the plot (78). However, mean height of measured stemflow of the 8 trunks represented less than 0.5\% of the incident rainfall, even though we were generous limiting the incident surface of each trunk. In Santa Cruz Island, \cite{Pryetetal2012a} estimated stemflow of 0.6\% of the incident rainfall for the same vegetation at a similar altitude. Thus, considering that errors of our throughfall measurements might be considerably larger than measured stemflow, we consider stemflow to be negligible.
 
 All rain gauges used in the study were corrected for losses during bucket rotation using a dynamic calibration at the laboratory \citep{CalderandKidd1978}. Measured throughfall reached a plateau of 20 mm/h despite measured rainfall was significantly higher. It seems that the capacity of throughfall measured by the troughs cannot be larger than this value, equivalent to 30 tips per minute. Measured throughfall during a storm event was eliminated after the plateau. Therefore, some entire storm events are missing during the hot seasons. 
 
 \subsection{Canopy model}
-Canopy evaporation, net precipitation and cloud water interception are estimated using a modified sparse version of the original Rutter model \citep{Rutter1971, Rutter1975}. The model is based on a running water balance that requires parameters describing the structure, drainage and interception capacity of the canopy (\autoref{fig3:fog_scheme}). In contrast to \cite{Rutter1975} and \cite{Valenteetal1997}, the separation into a canopy and trunks compartment is not consider in the current model version (stemflow is negligible compared to the rainfall amount, see \autoref{sec:fog_int_moni}), thus the water balance calculations are performed only for the canopy and net precipitation ($P_{net}$) is reduced to throughfall \citep{Pryetetal2012a}. However, in cases where stemflow amount is relevant, the trunk compartment can be easily included in this model.
+Canopy evaporation, net precipitation and cloud water interception are estimated using a modified sparse version of the original Rutter model \citep{Rutter1971, Rutter1975}. The model is based on a running water balance that requires parameters describing the structure, drainage and interception capacity of the canopy (\autoref{fig3:fog_scheme}). In contrast to \cite{Rutter1975} and \cite{Valenteetal1997}, the separation into a canopy and trunks compartment is not considered in the current model version (stemflow is negligible compared to the rainfall amount, see \autoref{sec:fog_int_moni}), thus the water balance calculations are performed only for the canopy and net precipitation ($P_{net}$) is reduced to throughfall \citep{Pryetetal2012a}. However, in cases where stemflow amount is relevant, the trunk compartment can be easily included in this model.
 
 All variables referring to a water storage, or flux, were expressed as depth of water over the whole plot area.
 The model considers changes in the water stored within the canopy compartment derived from the water balance for a plot area. In the absence of cloud water interception ($CWI$) the water budget can be written as follows:
@@ -131,7 +135,7 @@ In this model, we consider cloud water intercepted by the canopy. Whereas interc
 \begin{equation} \label{eq:fog_wi}
     CWI = fic \times FGI
 \end{equation}
-Notice that $CWI$ do not depend of the canopy cover but, rather, is only a proportion of $FGI$. Given that $FGI$ would not be a vertical water input, we consider that an horizontal canopy cover would be different than ($1-p$). However, we use $CWI$ to increase the vertical canopy water storage which is a fair assumption considering that $CWI$ will be stored by the canopy before dripping to the floor. 
+Notice that $CWI$ does not depend of the canopy cover but, rather, is only a proportion of $FGI$. Given that $FGI$ would not be a vertical water input, we consider that an horizontal canopy cover would be different than ($1-p$). However, we use $CWI$ to increase the vertical canopy water storage which is a fair assumption considering that $CWI$ will be stored by the canopy before dripping to the floor. 
 
 Considering cloud water interception, the wet canopy water budget equation is written as follows:
 \begin{equation} \label{eq:fog_can_bal_cwi}
@@ -170,7 +174,7 @@ Given the above assumptions and equivalence, in the passive fog gauge, the volum
  \begin{equation} \label{eq:fog_vol1}
     VF_r = RF_a \times S_{fp}
 \end{equation}
-where $VF_r$ is the volume of intercepted rainfall by the passive fog gauge and $S_{fp}$ is the projected surface of the fog net perpendicular to the direction of $RF_a$ (\autoref{fig3:fog_gauge}). $S_{fp}$ decreases with the first couple of degrees, such as the rain gauge, until it reaches an inflection point, which corresponds to the appearance of the cylinder net, where $S_{fp}$ starts to increase considerably. $S_{fp}$ reaches a maximum value a couple of ten of degrees before the inclination of rainfall is horizontal, from this point its value starts to decline until it reaches the horizontal projection surface of the cylinder. Because, $S_{fp}$ is a function of the inclination angle of $RF_a$ and its geometry, then, the amount of cloud water from fog gauge interception (FGI) can be estimated as:
+where $VF_r$ is the volume of intercepted rainfall by the passive fog gauge and $S_{fp}$ is the projected surface of the fog net perpendicular to the direction of $RF_a$ (\autoref{fig3:fog_gauge}). $S_{fp}$ decreases with the first couple of degrees, such as the rain gauge (My comment: when you say, such as the rain gauge, do you mean something like: similarly to the rain gauge?), until it reaches an inflection point, which corresponds to the appearance of the cylinder net, where $S_{fp}$ starts to increase considerably. $S_{fp}$ reaches a maximum value at a couple of ten of degrees before the inclination of rainfall is horizontal, from this point its value starts to decline until it reaches the horizontal projection surface of the cylinder. Because, $S_{fp}$ is a function of the inclination angle of $RF_a$ and its geometry, then, the amount of cloud water from fog gauge interception (FGI) can be estimated as:
  \begin{equation} \label{eq:fog_fog}
     FGI = \pi \times h_c \times D_c/2 \times (VF_T - fe \times VF_r)
 \end{equation}
