Cambios Miguel abstract v2

--- a/fog_paper_v2.tex
+++ b/fog_paper_v2.tex
@@ -40,7 +40,8 @@
 
 \begin{abstract}
 
-Cloud water interception (CWI) by the vegetation can be an important water input to ecosystems subject to fog occurrence. In this work, we propose a methodology to estimate CWI by a forest using a Rutter-type interception model. The approach requires the acquisition of experimental data. Continuous records of meteorological variables, including fog interception that is measured using a fog gauge system, are used as the input of the model.  Additionally, throughfall measurements performed below the forest are required only for the calibration and validation of the model, which constitutes a significant advantage considering the difficulties to obtain continuous records of throughfall. This methodology is applied in San Cristobal Island (Galapagos), where a semi-permanent fog layer covers the windward highlands during six months per year. A study plot in an endemic forest in the highlands has been monitored during two years. Results show that CWI reaches 22\% and 10\% of the total water input of the first and second year, respectively. During the hot seasons, where fog is absent, CWI is negligible as expected, while it represents 34\% and 18\% of the water inputs during the first and second cool seasons, respectively. The marked difference of CWI between both cool seasons is related to lower fog liquid water content in the air during the second one, consequence of the sea surface temperature anomaly previous to the 2015-2015 El Niño event. This methodology provides an indirect quantification of CWI by the vegetation from artificial fog gauges, it identifies controlling factors of CWI and it could be used to compare CWI in contrasting land covers.
+We propose a methodology to estimate cloud water interception (CWI) by a forest using a Rutter-type interception model. The approach requires the acquisition of continuous records of meteorological variables, including fog interception, which is measured using a fog gauge system. Throughfall measurements performed below the forest are used only for calibration and validation of the model, which represents a significant advantage considering the complexity of such type of measurements. The methodology is applied on a set of data collected during a period of two years in an endemic forest in the highlands of San Cristobal Island (Galapagos), where a semi-permanent fog layer covers the study area during six months per year. Our results show that CWI reaches 22\% and 10\% of the total water input during the first and second year, respectively. As expected, during the hot seasons, where fog is absent, CWI is negligible, while it represents 34\% and 18\% of the water inputs during the first and second cool seasons. We attribute this marked difference to a lower fog liquid water content during the second year as a consequence of the sea surface temperature anomaly that precedes the 2015-2016 (revisa los años) El Niño event. The application of this methodology provides an indirect way to quantify CWI by vegetation using artificial fog gauges. In addition, it allows the identification of controlling factors of CWI and it could be useful to compare CWI in contrasting land covers.
+
 \end{abstract}
 
 \textbf{Keywords:} Cloud water interception, Fog, Throughfall, Wet canopy evaporation, Canopy water balance, Galapagos
